Bug 888236 - Add metro specific window classes and messages to ipc defer message processing. r=bsmedberg